--- a/index.html
+++ b/index.html
@@ -9,6 +9,76 @@
   <title>Connect Four</title>
 </head>
 <body>
-  
+  <h1 class="game-title">CONNECT FOUR</h1>
+  <h2 class="turn-title">It is BLACK's Turn</h2>
+  <div class="board">
+    <div class="column">
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+    </div>
+    <div class="column">
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+    </div>
+    <div class="column">
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+    </div>
+    <div class="column">
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+    </div>
+    <div class="column">
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+    </div>
+    <div class="column">
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+    </div>
+    <div class="column">
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+      <div class="square"></div>
+    </div>
+  </div>
+  <div class="info-section">
+    <p class="red-info">RED has # of turns remaining</p>
+    <p class="black-info">BLACK has # of turns remaining</p>
+  </div>
 </body>
 </html>
+
+
+<!-- Connect Four -->
+<!--  board, -->
+  <!-- grid of squares 7 columns, 6 rows-->
+  <!-- leg elements -->
+
