--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="legs legR"></div>
       <div class="psuedo-board"></div>
       <div class="board">
-        <div class="column">
+        <div class="column" id="c0">
           <div class="above-board"></div>
           <div class="square" id="0"></div>
           <div class="square" id="1"></div>
@@ -25,7 +25,7 @@
           <div class="square" id="4"></div>
           <div class="square" id="5"></div>
         </div>
-        <div class="column">
+        <div class="column" id="c1">
           <div class="above-board"></div>
           <div class="square" id="6"></div>
           <div class="square" id="7"></div>
@@ -34,7 +34,7 @@
           <div class="square" id="10"></div>
           <div class="square" id="11"></div>
         </div>
-        <div class="column">
+        <div class="column" id="c2">
           <div class="above-board"></div>
           <div class="square" id="12"></div>
           <div class="square" id="13"></div>
@@ -43,7 +43,7 @@
           <div class="square" id="16"></div>
           <div class="square" id="17"></div>
         </div>
-        <div class="column">
+        <div class="column" id="c3">
           <div class="above-board"></div>
           <div class="square" id="18"></div>
           <div class="square" id="19"></div>
@@ -52,7 +52,7 @@
           <div class="square" id="22"></div>
           <div class="square" id="23"></div>
         </div>
-        <div class="column">
+        <div class="column" id="c4">
           <div class="above-board"></div>
           <div class="square" id="24"></div>
           <div class="square" id="25"></div>
@@ -61,7 +61,7 @@
           <div class="square" id="28"></div>
           <div class="square" id="29"></div>
         </div>
-        <div class="column">
+        <div class="column" id="c5">
           <div class="above-board"></div>
           <div class="square" id="30"></div>
           <div class="square" id="31"></div>
@@ -70,7 +70,7 @@
           <div class="square" id="34"></div>
           <div class="square" id="35"></div>
         </div>
-        <div class="column">
+        <div class="column" id="c6">
           <div class="above-board"></div>
           <div class="square" id="36"></div>
           <div class="square" id="37"></div>
