--- a/index.html
+++ b/index.html
@@ -16,71 +16,57 @@
       <div class="legs legR"></div>
       <div class="psuedo-board"></div>
       <div class="board">
-        <div class="column" id="c0">
-          <div class="above-board"></div>
-          <div class="square" id="0"></div>
-          <div class="square" id="1"></div>
-          <div class="square" id="2"></div>
-          <div class="square" id="3"></div>
-          <div class="square" id="4"></div>
-          <div class="square" id="5"></div>
-        </div>
-        <div class="column" id="c1">
-          <div class="above-board"></div>
-          <div class="square" id="6"></div>
-          <div class="square" id="7"></div>
-          <div class="square" id="8"></div>
-          <div class="square" id="9"></div>
-          <div class="square" id="10"></div>
-          <div class="square" id="11"></div>
-        </div>
-        <div class="column" id="c2">
-          <div class="above-board"></div>
-          <div class="square" id="12"></div>
-          <div class="square" id="13"></div>
-          <div class="square" id="14"></div>
-          <div class="square" id="15"></div>
-          <div class="square" id="16"></div>
-          <div class="square" id="17"></div>
-        </div>
-        <div class="column" id="c3">
-          <div class="above-board"></div>
-          <div class="square" id="18"></div>
-          <div class="square" id="19"></div>
-          <div class="square" id="20"></div>
-          <div class="square" id="21"></div>
-          <div class="square" id="22"></div>
-          <div class="square" id="23"></div>
-        </div>
-        <div class="column" id="c4">
-          <div class="above-board"></div>
-          <div class="square" id="24"></div>
-          <div class="square" id="25"></div>
-          <div class="square" id="26"></div>
-          <div class="square" id="27"></div>
-          <div class="square" id="28"></div>
-          <div class="square" id="29"></div>
-        </div>
-        <div class="column" id="c5">
-          <div class="above-board"></div>
-          <div class="square" id="30"></div>
-          <div class="square" id="31"></div>
-          <div class="square" id="32"></div>
-          <div class="square" id="33"></div>
-          <div class="square" id="34"></div>
-          <div class="square" id="35"></div>
-        </div>
-        <div class="column" id="c6">
-          <div class="above-board"></div>
-          <div class="square" id="36"></div>
-          <div class="square" id="37"></div>
-          <div class="square" id="38"></div>
-          <div class="square" id="39"></div>
-          <div class="square" id="40"></div>
-          <div class="square" id="41"></div>
-        </div>
-        <button class="reset">RESET</button>
+        <div class="above-board col-0" id="a0"></div>
+        <div class="above-board col-1" id="a1"></div>
+        <div class="above-board col-2" id="a2"></div>
+        <div class="above-board col-3" id="a3"></div>
+        <div class="above-board col-4" id="a4"></div>
+        <div class="above-board col-5" id="a5"></div>
+        <div class="above-board col-6" id="a6"></div>
+        <div class="square col-0" id="0"></div>
+        <div class="square col-1" id="1"></div>
+        <div class="square col-2" id="2"></div>
+        <div class="square col-3" id="3"></div>
+        <div class="square col-4" id="4"></div>
+        <div class="square col-5" id="5"></div>
+        <div class="square col-6" id="6"></div>
+        <div class="square col-0" id="7"></div>
+        <div class="square col-1" id="8"></div>
+        <div class="square col-2" id="9"></div>
+        <div class="square col-3" id="10"></div>
+        <div class="square col-4" id="11"></div>
+        <div class="square col-5" id="12"></div>
+        <div class="square col-6" id="13"></div>
+        <div class="square col-0" id="14"></div>
+        <div class="square col-1" id="15"></div>
+        <div class="square col-2" id="16"></div>
+        <div class="square col-3" id="17"></div>
+        <div class="square col-4" id="18"></div>
+        <div class="square col-5" id="19"></div>
+        <div class="square col-6" id="20"></div>
+        <div class="square col-0" id="21"></div>
+        <div class="square col-1" id="22"></div>
+        <div class="square col-2" id="23"></div>
+        <div class="square col-3" id="24"></div>
+        <div class="square col-4" id="25"></div>
+        <div class="square col-5" id="26"></div>
+        <div class="square col-6" id="27"></div>
+        <div class="square col-0" id="28"></div>
+        <div class="square col-1" id="29"></div>
+        <div class="square col-2" id="30"></div>
+        <div class="square col-3" id="31"></div>
+        <div class="square col-4" id="32"></div>
+        <div class="square col-5" id="33"></div>
+        <div class="square col-6" id="34"></div>
+        <div class="square col-0" id="35"></div>
+        <div class="square col-1" id="36"></div>
+        <div class="square col-2" id="37"></div>
+        <div class="square col-3" id="38"></div>
+        <div class="square col-4" id="39"></div>
+        <div class="square col-5" id="40"></div>
+        <div class="square col-6" id="41"></div>
       </div>
+      <button class="reset">RESET</button>
     </div>
     
     <div class="status-section">
