--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="legs legL"></div>
       <div class="legs legR"></div>
       <div class="psuedo-board"></div>
-      <div class="board">
+      <div class="board" id="board">
         <div class="above-board col-0" id="a0"></div>
         <div class="above-board col-1" id="a1"></div>
         <div class="above-board col-2" id="a2"></div>
