--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Paytone+One&display=swap" rel="stylesheet">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
+    
     <title>Connect Four</title>
   </head>
   <body>
@@ -73,8 +78,8 @@
     </div>
     
     <div class="status-section">
-      <p class="red-status">RED has # of turns remaining</p>
-      <p class="black-status">BLACK has # of turns remaining</p>
+      <p class="black-status"></p>
+      <p class="red-status"></p>
     </div>
   </body>
 </html>
