--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=0.41, maximum-scale=1" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
     <script defer src="js/app.js"></script>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -76,7 +77,6 @@
       </div>
       <button class="reset">RESET</button>
     </div>
-    
     <div class="status-section">
       <p class="black-status"></p>
       <p class="red-status"></p>
@@ -84,7 +84,3 @@
   </body>
 </html>
 
-<!-- Connect Four -->
-<!--  board, -->
-<!-- grid of squares 7 columns, 6 rows-->
-<!-- leg elements -->
